--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -1,8 +1,10 @@
 <h3>Feature</h3>
-<p>-</p>
+<p>Added "dynamic scopes".</p>
+<p></p>
 
 <h3>Refactoring</h3>
 <p>Minor refactorings and improvements, JSDoc fixes.</p>
+<p>Refactored the template of the Tree class, for use of dynamic scopes</p>
 <p>Most classes, that implemented mixins - now extend them.</p>
 <p>Renamed in Enumerable:</p>
 <ul>
@@ -13,3 +15,5 @@
 
 <h3>Fixes</h3>
 <p>Fixed a serialization issue in Lava.Serializer.</p>
+<p>Fixed a bug in view refresh system.</p>
+<p>Fixed a bug in template compiling algorithm</p>
