--- a/www/widgets.html
+++ b/www/widgets.html
@@ -50,6 +50,13 @@
 	<x:property_string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</x:property_string>
 </script>
 
+<div id="loading_indicator" class="loading-box" style="display:block">
+	<div class="loading-box-inner">
+		<div style="position:absolute;width:100%;text-align:center;line-height:128px;font-weight:bold;">LOADING</div>
+		<img src="/www/img/loading.gif" style="margin: 0 auto;" />
+	</div>
+</div>
+
 <!--LAVA_BUILD_INCLUDE:navbar.html-->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container">
@@ -137,10 +144,6 @@
 		</div>
 
 		<div class="col-md-9" role="main">
-
-			<div class="well text-center" id="loading_indicator">
-				<i class="glyphicon glyphicon-refresh"></i> Loading ...
-			</div>
 
 			<h1>Standard widgets showcase</h1>
 			<p>
