--- a/www/about.html
+++ b/www/about.html
@@ -120,7 +120,7 @@
 
 			<h2>Make a deal</h2>
 			<p>Currently, I'm open to any contacts for any reason. You are welcome to contact me via GitHub or email: </p>
-			<p>kogarashisan1 [atsign] gmail [dot] com. </p>
+			<p>kogarashisan1 [put atsign here] gmail [dot] com. </p>
 
 		</div>
 
