--- a/www/changelog.html
+++ b/www/changelog.html
@@ -57,7 +57,7 @@
 <div class="loading-box" x:type="view" x:style:display="($page.is_loading) ? 'block' : 'none'">
 	<div class="loading-box-inner">
 		<div style="position:absolute;width:100%;text-align:center;line-height:128px;font-weight:bold;">LOADING</div>
-		<img src="/www/img/loading.gif" style="margin: 0 auto;" />
+		<img src="/www/design/loading.gif" style="margin: 0 auto;" />
 	</div>
 </div>
 <!--LAVA_BUILD_INCLUDE_END-->
