--- a/www/versions/0.3.0.html
+++ b/www/versions/0.3.0.html
@@ -23,5 +23,5 @@
 	<li>TemplateParser now correctly parses the &lt;script&gt; tags</li>
 	<li>TemplateParser: now concatenates adjacent strings in many cases</li>
 	<li>Fixed some bugs in Collection and Record fields</li>
-	<li>Fixed "Debug assertion failed" in If view</li>
+	<li>Fixed "Debug assertion failed" in "If" view</li>
 </ul>
