--- a/www/widgets.html
+++ b/www/widgets.html
@@ -53,7 +53,7 @@
 <div id="loading_indicator" class="loading-box" style="display:block">
 	<div class="loading-box-inner">
 		<div style="position:absolute;width:100%;text-align:center;line-height:128px;font-weight:bold;">LOADING</div>
-		<img src="/www/img/loading.gif" style="margin: 0 auto;" />
+		<img src="/www/design/loading.gif" style="margin: 0 auto;" />
 	</div>
 </div>
 
