--- a/www/tasks.html
+++ b/www/tasks.html
@@ -161,7 +161,6 @@
  DEBUG_LISTENERS - listeners on destroyed objects</span></li>
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> some DEBUG checks should become permanent</li>
 <li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span> _cRawBlock.class_locator.name - rename to locator and change type to _cViewLocator.<br/>Same for _cWidgetConfig.class_locator.</li>
-<li><span class="tag-P3">P3</span><span class="tag-Fix">Fix</span> when parsing sugar inside x:define and x:widget: sugar config must be merged with parent,<br/>and class name of sugar must be taken from config.</li>
 <li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span> ScopeManager::scheduleScopeRefresh: do not return an object, use property of the Refreshable.</li>
 <li><span class="tag-P2">P2</span><span class="tag-Dev">Dev</span> recursive x:binding and x:assign protection.<span class="task-comment">Currently, you can create an assign of any property to itself</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Fix">Fix</span> fixes for old IE: check if get/set value on &lt;select&gt; elements works as expected. Write tests.<span class="task-comment">see <br/><br/> https://mootools.lighthouseapp.com/projects/2706/tickets/1116 <br/>
@@ -184,7 +183,6 @@
 </ul>
 <h3>Data/</h3>
 <ul>
-<li><span class="tag-P2">P2</span><span class="tag-Refactoring">Refactoring</span> make Guid field, and remove the check in record::get<span class="task-comment">guid is needed for MetaStorage</span></li>
 <li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> schema switch to turn off validation</li>
 <li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> an ability to unload records from modules to free memory.</li>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> DateTime field. Will be serialized to integer, but internal value will be a Date object.</li>
@@ -215,13 +213,15 @@
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> x:classBinding directive - alternative form for x:class attribute</li>
 <li><span class="tag-P2">P2</span><span class="tag-Dev">Dev</span> make the text for exception "Text is not allowed in this context" inside asBlocks() more meaningful<span class="task-comment">text should depend on context</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> x:controller control attribute - similar to x:widget<span class="task-comment">create an inline widget from element, with specified controller class. Also should work on sugar.</span></li>
-<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> allow to set default widget config in sugar options. Such config must be merged properly.<span class="task-comment">Reason: sometimes you will want to add options and other settings to sugar.</span></li>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Q">Q</span> static_value directive should treat it's content as default value.</li>
 </ul>
 <h3>Parsers/Directives.js</h3>
 <ul>
 <li><span class="tag-P2">P2</span><span class="tag-Refactoring">Refactoring</span> get rid of roles_storage to simplify logic</li>
 <li><span class="tag-P5">P5</span><span class="tag-Dev">Dev</span><span class="tag-Q">Q</span> resources: need &lt;component path="..."&gt; tag inside &lt;resources&gt; to shorten paths</li>
+<li><span class="tag-P4">P4</span><span class="tag-Dev">Dev</span> set_config_options template editing task:<br/>1) allow to set several options at once (via &lt;assigns&gt; collection) <br/>
+2) allow to use user-defined function as filter condition <br/>
+3) allow to select several items at once</li>
 </ul>
 <h3>Parsers/TemplateParser.js</h3>
 <ul>
@@ -244,7 +244,7 @@
 </ul>
 <h3>System/Enumerable.class.js</h3>
 <ul>
-<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> methods relocateIndex(old_index, new_index) and relocateValue(value, new_index)<span class="task-comment">is equivalent of removeAt, than insertAt for given value.<br/> They will not fire item_removed/added events, only collection_changed</span></li>
+<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> methods moveIndex(old_index, new_index) and moveValue(value, new_index)<span class="task-comment">is equivalent of removeAt, than insertAt for given value. Preserves UID.</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Performance">Performance</span> Enumerable is inherited from Properties, but does not use _properties and _property_listeners.<br/>They should not take space in constructed objects.</li>
 <li><span class="tag-P5">P5</span><span class="tag-Performance">Performance</span> It's possible to optimize updateFromEnumerable - do not calculate diff if there are no listeners.<br/>Also inspect other functions for optimization.</li>
 </ul>
@@ -255,8 +255,9 @@
 <h3>System/Sugar.class.js</h3>
 <ul>
 <li><span class="tag-P5">P5</span><span class="tag-Dev">Dev</span> always check that there are no redundant attributes on sugar tags<span class="task-comment">it's checked on root tag, but not on objects</span></li>
-<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> allow to set the default widget config in sugar. It will allow to create a sugar with default options.</li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> allow to set the default widget config in sugar. It will allow to create a sugar with default options.<span class="task-comment">Reason: sometimes you will want to add options and other settings to sugar.<br/> Such config must be merged properly.</span></li>
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span><span class="tag-Q">Q</span> control attributes of sugar should be handled in Sugar class</li>
+<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> when parsing sugar inside x:define and x:widget: sugar config must be merged with parent,<br/>and class name of sugar must be taken from config.</li>
 </ul>
 <h3>System/Template.class.js</h3>
 <ul>
@@ -329,9 +330,9 @@
 </ul>
 <h3>Accordion</h3>
 <ul>
-<li><span class="tag-p5">p5</span><span class="tag-Feature">Feature</span> collapseAll()</li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> collapseAll()</li>
 </ul>
-<h3>TreeView</h3>
+<h3>Tree</h3>
 <ul>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> must not contain Morph containers inside it</li>
 </ul>
