--- a/www/roadmap.html
+++ b/www/roadmap.html
@@ -110,9 +110,8 @@
 		<div class="col-md-9" role="main">
 			<h1>Roadmap</h1>
 			<p>General directions and big plans. Task priority does not depend on order.</p>
-			<p>For more detailed tak list see the <a href="tasks.html">Tasks</a> page.</p>
+			<p>For more detailed task list see the <a href="tasks.html">Tasks</a> page.</p>
 			<ul>
-				<li>English video tutorials</li>
 				<li>CSS class names compression, resource names compression</li>
 				<li>Unit-testing</li>
 				<li>Advanced code compression</li>
