--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -20,6 +20,7 @@
 			<li>contains -> containsValue</li>
 		</ul>
 	</li>
+	<li>Tooltip widget: now does not escape html. PopoverManager: replaces newlines with &lt;br&gt;</li>
 </ul>
 
 <h3>Fixes</h3>
