--- a/www/versions/master.html
+++ b/www/versions/master.html
@@ -21,6 +21,8 @@
 		</ul>
 	</li>
 	<li>Tooltip widget: now does not escape html. PopoverManager: replaces newlines with &lt;br&gt;</li>
+	<li>Widget definitions: <cpde>&lt;view role="..."&gt;</cpde> and <code>&lt;template role="..."&gt;</code> are split
+		into 3 new tags: &lt;include&gt;, &lt;main_view&gt; and &lt;main_template&gt;.</li>
 </ul>
 
 <h3>Fixes</h3>
