--- a/www/widgets.html
+++ b/www/widgets.html
@@ -206,7 +206,7 @@
 						<container path="panel.COLLAPSIBLE_PANEL_CONTAINER" add_classes="panel-info"></container>
 					</x:resources>
 					<panels>
-						<panel is-expanded="true">
+						<panel is_expanded="true">
 							<title>Panel 1</title>
 							<content>
 								<p><strong>Below is a data-bound-view in Metamorph-like container:</strong></p>
