--- a/www/tasks.html
+++ b/www/tasks.html
@@ -63,11 +63,13 @@
 						Learn <b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">
+						<li><a href="/www/doc.html#tab=tutorials">Tutorials</a></li>
+						<li><a href="/www/doc.html#tab=reference">Reference</a></li>
+						<li><a href="/www/doc.html#tab=api">API</a></li>
 						<li><a href="/www/examples.html">Examples</a></li>
 						<!--li class="divider"></li-->
 						<!--li class="dropdown-header">Coming soon:</li-->
-						<li class="disabled"><a href="#">Manual</a></li>
-						<li class="disabled"><a href="#">Video tutorials</a></li>
+						<!--li class="disabled"><a href="#">Video tutorials</a></li-->
 					</ul>
 				</li>
 				<li class="dropdown" x:widget="DropDown">
@@ -83,7 +85,6 @@
 						<li><a href="/www/tasks.html">Tasks</a></li>
 						<!--li class="divider"></li-->
 						<!--li class="dropdown-header">Coming soon:</li-->
-						<li class="disabled"><a href="#">API</a></li>
 						<li class="disabled"><a href="#">Code coverage</a></li>
 					</ul>
 				</li>
@@ -140,7 +141,7 @@
 <li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span><span class="tag-Performance">Performance</span> inside sleep() of the views it's not needed to turn off the argument listeners, only arguments themselves.</li>
 <li><span class="tag-P5">P5</span><span class="tag-Performance">Performance</span><span class="tag-Q">Q</span> turn off view bindings in sleep() (*)</li>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Q">Q</span> hard_refresh event for views hierarchy<span class="task-comment">to force refresh of views, which are bound to plain JS objects (like Angular refresh cycle)</span></li>
-<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Performance">Performance</span><span class="tag-Q">Q</span> new kind of template includes - inlineInclude. Will be replaced in config, one time and forever.</li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Performance">Performance</span><span class="tag-Q">Q</span> new kind of template includes - inlineInclude. Will be replaced in config, once and forever.</li>
 <li><span class="tag-P2">P2</span><span class="tag-Refactoring">Refactoring</span> Widget and Refresher* must not access Firestorm.Element</li>
 <li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span> CONTROL_ATTRIBUTE_PREFIX and some other constants must be moved into Lava or schema</li>
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> remove "active modifiers" (see parsers, Argument and support)</li>
@@ -148,7 +149,7 @@
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> Resource names compression</li>
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> search the framework code and find possibilities to rewrite for usage of:<br/>Firestorm.Array.exclude and Firestorm.Object.copy<span class="task-comment">Firestorm.Object.copy may be used in ClassManager in place of extend()</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> config extenders should be turned into normal class, and created in Lava.init()</li>
-<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> {&gt;property: $path.to.include} - an include, which takes template from property.</li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> View/Include.class.js - view, which takes it's template config from a variable (dynamic include)</li>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span><span class="tag-Performance">Performance</span> new kind of argument - StaticArgument for one-time calculations. Use it in static_eval<span class="task-comment">must not attach listeners</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span><span class="tag-Performance">Performance</span> Possible optimization: if Argument is equal to scope binding, than do not create an argument, get the binding.<span class="task-comment">search every place where Argument is used</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span><span class="tag-Performance">Performance</span> Segment option to evaluate it's property name only once and do not create listeners<span class="task-comment">in expression parser it will be curly braces instead of square: row{column.name}</span></li>
@@ -172,6 +173,8 @@
 <ul>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> pulsating and cyclic animations<span class="task-comment">most likely, there will be another independent class - AnimationSequence</span></li>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Q">Q</span> animations should switch to transitions, if browser supports them<span class="task-comment">there must be a separate setting in the shema, USE_TRANSITIONS</span></li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> native Scroll animation, which adjusts it's duration in dependency to acroll distance<span class="task-comment">Dependency should be logarithmic. Use it in documentation page, instead of Fx.Scroll</span></li>
+<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> add reverse_direction option to config (when animation is created - it's already reversed)</li>
 </ul>
 <h3>Animation/BootstrapCollapse.class.js</h3>
 <ul>
@@ -207,6 +210,9 @@
 <li><span class="tag-P5">P5</span><span class="tag-Performance">Performance</span> use insertAdjacentHTML where possible (*)</li>
 <li><span class="tag-P5">P5</span><span class="tag-Performance">Performance</span> implement fast offset calculation algorithm (*)</li>
 <li><span class="tag-P4">P4</span><span class="tag-Performance">Performance</span> use native element's classList property in addClass(es), removeClass(es), hasClass</li>
+<li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> hashchange event emulation for old/mobile browsers (not supported in Opera mini)</li>
+<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> native setters like setClass and setHTML</li>
+<li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> Array.select(), selectFirst() - like filter, but returns another array</li>
 </ul>
 <h3>Parsers/</h3>
 <ul>
@@ -221,6 +227,8 @@
 <li><span class="tag-P4">P4</span><span class="tag-Dev">Dev</span> set_config_options template editing task:<br/>1) allow to set several options at once (via &lt;assigns&gt; collection) <br/>
 2) allow to use user-defined function as filter condition <br/>
 3) allow to select several items at once</li>
+<li><span class="tag-P3">P3</span><span class="tag-Refactoring">Refactoring</span> known tasks for edit_template: move into separate object. Rename 'known' -> 'predefined'</li>
+<li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> Refactoring for the &lt;x:refresher&gt; directive<span class="task-comment">1) Allow attributes like 'class'. <br/><br/> 2) Allow packages for view refreshers (&lt;x:refresher class="$classname/RefresherName"&gt;)</span></li>
 </ul>
 <h3>Parsers/TemplateParser.js</h3>
 <ul>
@@ -229,6 +237,7 @@
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Q">Q</span> &lt;x:region&gt; directive for includes: it will allow to cut off pieces of template depending on options</li>
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> remove unused lexer switch preserve_whitespace</li>
 <li><span class="tag-P5">P5</span><span class="tag-Fix">Fix</span><span class="tag-Dev">Dev</span> _parseStyleAttribute: currently will not parse style strings which contain strings with semicolon inside them as style value<span class="task-comment">do not use such styles, use classes!</span></li>
+<li><span class="tag-P4">P4</span><span class="tag-Fix">Fix</span> sequential strings are not always united into one</li>
 </ul>
 <h3>Parsers/ExpressionParser.js</h3>
 <ul>
@@ -246,6 +255,7 @@
 <li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> methods moveIndex(old_index, new_index) and moveValue(value, new_index)<span class="task-comment">is equivalent of removeAt, than insertAt for given value. Preserves UID.</span></li>
 <li><span class="tag-P3">P3</span><span class="tag-Performance">Performance</span> Enumerable is inherited from Properties, but does not use _properties and _property_listeners.<br/>They should not take space in constructed objects.</li>
 <li><span class="tag-P5">P5</span><span class="tag-Performance">Performance</span> It's possible to optimize updateFromEnumerable - do not calculate diff if there are no listeners.<br/>Also inspect other functions for optimization.</li>
+<li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> - select(), selectFirst() - like filter, but returns array, instead of modifying the instance<span class="task-comment">also, refactor the site:build/src/ContentLoader class for usage of new methods</span></li>
 </ul>
 <h3>System/PopoverManager.class.js</h3>
 <ul>
@@ -297,6 +307,8 @@
 <h3>Serializer.js</h3>
 <ul>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span><span class="tag-Q">Q</span> currently, serializing a string preserves the "\r\n" sequence.<br/>Convert it to "\n" by default and make a schema switch to return the old behaviour.</li>
+<li><span class="tag-P1">P1</span><span class="tag-Feature">Feature</span> Serializer must be a separate class with config<span class="task-comment">1) Add an option to serialize into valid JSON format (with quoted attributes) <br/><br/> 2) Option to remove padding and spaces <br/>
+ 3) Ability to indent functions (take from LavaBuild helper class)</span></li>
 </ul>
 <h3>transitions.js</h3>
 <ul>
@@ -311,6 +323,7 @@
 <li><span class="tag-P5">P5</span><span class="tag-Refactoring">Refactoring</span> namespaces reservation: move to a separate file (this will allow to generate it in user projects)</li>
 <li><span class="tag-P5">P5</span><span class="tag-Feature">Feature</span> create a script, which generates the file with namespaces in Lava.</li>
 <li><span class="tag-P2">P2</span><span class="tag-Feature">Feature</span> bootstrap() should process the control (x:) attributes, for example x:resource_id</li>
+<li><span class="tag-P3">P3</span><span class="tag-Feature">Feature</span> Lava.addType() - add a new type to Lava.types</li>
 </ul>
 <h3>Algorithms/Sorting/</h3>
 <ul>
