--- a/www/doc.html
+++ b/www/doc.html
@@ -492,7 +492,7 @@
 				<x:refresher>{class: 'Standard', insertion_strategy: 'sequential_elements'}</x:refresher>
 				<div x:type="view" class="api-tabs-tab"
 					x:style:display="tab.is_active ? 'block' : 'none'">
-					{>$tabs.tab_include(tab, 'content'))}
+					{>$tabs.tab_include(tab, 'content')}
 				</div>
 			{/foreach}
 		</div>
