Changed 'about' page

--- a/www/about.html
+++ b/www/about.html
@@ -119,9 +119,9 @@
 				With a team I developed and maintained shops with 50 to 500 thousands of unique daily visitors.
 			</p>
 
-			<h2>Make a deal</h2>
-			<p>Currently, I'm open to any contacts for any reason. You are welcome to contact me via GitHub or email: </p>
-			<p>kogarashisan1 [put atsign here] gmail [dot] com. </p>
+			<h2>Contact</h2>
+			<p>You are welcome to contact me via GitHub or email for any reason: </p>
+			<p>kogarashisan1 [put @tsign here] gmail [d0t] com. </p>
 
 		</div>
 
