next version - work-in-progress

--- a/Parsers.html
+++ b/Parsers.html
@@ -2,9 +2,9 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<script src="http://ajax.googleapis.com/ajax/libs/mootools/1.5.1/mootools-yui-compressed.js"></script>
-	<script src="dependencies/jison/webtoolkit.base64.js"></script>
-	<script src="dependencies/jison/es5.js"></script>
-	<script src="dependencies/jison/jison.js"></script>
+	<script src="build/jison/webtoolkit.base64.js"></script>
+	<script src="build/jison/es5.js"></script>
+	<script src="build/jison/jison.js"></script>
 </head>
 <body>
 
